[webapp] bugfix the cover of the big screen is too small (#724)
  [webapp] bugfix the cover of the big screen is too small

  [webapp] bugfix the cover of the big screen is too small

--- a/web-app/src/app/layout/passport/passport.component.less
+++ b/web-app/src/app/layout/passport/passport.component.less
@@ -34,6 +34,8 @@
       background-image: url("src/assets/bg.png");
       background-repeat: no-repeat;
       background-position: center;
+      background-attachment: fixed;
+      background-size: cover;
     }
     .wrap {
       padding: 32px 0 24px;
